force-app/main/default/objects/API_Configuration__c/API_Configuration__c.object-meta.xml
<CustomObject>
    <label>API Configuration</label>
    <nameField>
        <displayFormat>ACN-{000000000}</displayFormat>
        <label>API Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>