force-app/main/default/objects/API_Configuration__c/fields/API_Type__c.field-meta.xml
<CustomField>
    <fullName>API_Type__c</fullName>
    <label>API Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expense Sync Request</fullName>
            </value>
            <value>
                <fullName>LeaveUpdate</fullName>
            </value>
            <value>
                <fullName>Attendance Sync</fullName>
            </value>
            <value>
                <fullName>Purchase Order Sync</fullName>
            </value>
            <value>
                <fullName>Purchase Order Cancelled Sync</fullName>
            </value>
            <value>
                <fullName>Account Request</fullName>
                <isActive>false</isActive>
                <label>Account Request</label>
            </value>
            <value>
                <fullName>Meeting Request</fullName>
                <isActive>false</isActive>
                <label>Meeting Request</label>
            </value>
            <value>
                <fullName>Order Sync Request</fullName>
                <isActive>false</isActive>
                <label>Order Sync Request</label>
            </value>
            <value>
                <fullName>Product Query</fullName>
                <isActive>false</isActive>
                <label>Product Query</label>
            </value>
            <value>
                <fullName>Product Sync Request</fullName>
                <isActive>false</isActive>
                <label>Product Sync Request</label>
            </value>
            <value>
                <fullName>Sample Request</fullName>
                <isActive>false</isActive>
                <label>Sample Request</label>
            </value>
            <value>
                <fullName>Site Sync Request</fullName>
                <isActive>false</isActive>
                <label>Site Sync Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>