force-app/main/default/objects/API_Configuration__c/fields/JSON_Key__c.field-meta.xml
<CustomField>
    <fullName>JSON_Key__c</fullName>
    <label>JSON Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>