force-app/main/default/objects/API_Configuration__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Expense__c</fullName>
            </value>
            <value>
                <fullName>Expense_Line_Item__c</fullName>
            </value>
            <value>
                <fullName>Attendance__c</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
            <value>
                <fullName>Order_Installment__c</fullName>
            </value>
            <value>
                <fullName>OrderItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>