force-app/main/default/objects/API_Configuration__c/fields/Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name__c</fullName>
    <label>Parent Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expense__c</fullName>
            </value>
            <value>
                <fullName>Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>