force-app/main/default/objects/API_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>JSON_Key__c</columns>
    <columns>Data_Type__c</columns>
    <columns>API_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>equals</operation>
        <value>Expense__c,Expense_Line_Item__c</value>
    </filters>
    <label>All</label>
</ListView>