force-app/main/default/objects/API_Configuration__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>API_Type__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>JSON_Key__c</columns>
    <columns>Parent_Object_Name__c</columns>
    <columns>Include_Files__c</columns>
    <columns>Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>equals</operation>
        <value>Expense Sync Request</value>
    </filters>
    <label>Expense Sync Request</label>
</ListView>