force-app/main/default/objects/API_Configuration__c/listViews/Purchase_Order_Sync.listView-meta.xml
<ListView>
    <fullName>Purchase_Order_Sync</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Parent_Object_Name__c</columns>
    <columns>JSON_Key__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>API_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Type__c</field>
        <operation>equals</operation>
        <value>Purchase Order Sync</value>
    </filters>
    <label>Purchase Order Sync</label>
</ListView>